--- a/erpnext/selling/doctype/sales_order/sales_order_list.html
+++ b/erpnext/selling/doctype/sales_order/sales_order_list.html
@@ -6,7 +6,7 @@
 				<span class="filterable"
 					data-filter="customer,=,{%= doc.customer %}">
 					{%= doc.customer_name %}</span></span>
-			{% if(doc.per_delivered < 100 && doc.status!=="Stopped") { %}
+			<!-- {% if(doc.per_delivered < 100 && doc.status!=="Stopped") { %}
 				{% if(frappe.datetime.get_diff(doc.delivery_date) < 0) { %}
 				<span class="label label-danger filterable"
 					title="{%= doc.get_formatted("delivery_date")%}"
@@ -20,7 +20,10 @@
 					title="{%= __("Pending") %}">
 					{%= doc.get_formatted("delivery_date") || "Pending" %}</span>
 				{% } %}
-			{% } %}
+			{% } %} -->
+			<span class="label label-warning filterable"
+				data-filter="customer,=,{%= doc.transaction_date %}">
+					{%= doc.get_formatted("transaction_date") %}</span>
 			{% if(doc.per_delivered == 100 && doc.status!=="Stopped") { %}
 				<span class="filterable text-muted"
 					data-filter="per_delivered,=,100|status,!=,Stopped">
